sdk/v0.3/replicate.mdx
---
title: "pixeltable.functions.replicate"
sidebarTitle: "replicate"
icon: "square-m"
---

Pixeltable [UDFs](https://pixeltable.readme.io/docs/user-defined-functions-udfs) that wrap various endpoints from the Replicate API. In order to use them, you must first `pip install replicate` and configure your Replicate credentials, as described in the [Working with Replicate](https://pixeltable.readme.io/docs/working-with-replicate) tutorial.


<a href="https://github.com/pixeltable/pixeltable/blob/v0.3/pixeltable/functions/replicate.py#L0" target="_blank">View source on GitHub</a>

## UDFs


---

### `run()` <sub>udf</sub>

Run a model on Replicate.


For additional details, see: [https://replicate.com/docs/topics/models/run-a-model](https://replicate.com/docs/topics/models/run-a-model)

Request throttling: Applies the rate limit set in the config (section `replicate`, key `rate_limit`). If no rate limit is configured, uses a default of 600 RPM.

**Requirements:**

- `pip install replicate`


**Signature:**

```python
run(
    input: Json,
    ref: String
)-> Json
```

**Parameters:**

- **`input`** (*Json*): The input parameters for the model.
- **`ref`** (*String*): The name of the model to run.

**Returns:**

- *Json*: The output of the model.



**Example:**

Add a computed column that applies the model `meta/meta-llama-3-8b-instruct` to an existing Pixeltable column `tbl.prompt` of the table `tbl`:
```python
input = {'system_prompt': 'You are a helpful assistant.', 'prompt': tbl.prompt}
tbl.add_computed_column(response=run(input, ref='meta/meta-llama-3-8b-instruct'))
```

Add a computed column that uses the model `black-forest-labs/flux-schnell` to generate images from an existing Pixeltable column `tbl.prompt`:
```python
input = {'prompt': tbl.prompt, 'go_fast': True, 'megapixels': '1'}
tbl.add_computed_column(response=run(input, ref='black-forest-labs/flux-schnell'))
tbl.add_computed_column(image=tbl.response.output[0].astype(pxt.Image))
```

