sdk/v0.5.12/replicate.mdx
---
title: "replicate"
icon: "square-m"
description: "<a href=\"https://github.com/pixeltable/pixeltable/blob/main/pixeltable/functions/replicate.py#L0\" id=\"viewSource\" target=\"_blank\" rel=\"noopener noreferrer\"><img src=\"https://img.shields.io/badge/View%20Source%20on%20Github-blue?logo=github&labelColor=gray\" alt=\"View Source on GitHub\" style={{ display: 'inline', margin: '0px' }} noZoom /></a>"
noindex: true
---
# <span style={{ 'color': 'gray' }}>module</span>&nbsp; pixeltable.functions.replicate


Pixeltable UDFs
that wrap various endpoints from the Replicate API. In order to use them, you must
first `pip install replicate` and configure your Replicate credentials, as described in
the [Working with Replicate](https://docs.pixeltable.com/notebooks/integrations/working-with-replicate) tutorial.


## <span style={{ 'color': 'gray' }}>udf</span>&nbsp; run()

```python Signature
@pxt.udf
run(input: pxt.Json, *, ref: pxt.String) -> pxt.Json
```

Run a model on Replicate.

For additional details, see: [https://replicate.com/docs/topics/models/run-a-model](https://replicate.com/docs/topics/models/run-a-model)

Request throttling:
Applies the rate limit set in the config (section `replicate`, key `rate_limit`). If no rate
limit is configured, uses a default of 600 RPM.

__Requirements:__

- `pip install replicate`

**Parameters:**

- **`input`** (`pxt.Json`): The input parameters for the model.
- **`ref`** (`pxt.String`): The name of the model to run.

**Returns:**

- `pxt.Json`: The output of the model.

**Examples:**

Add a computed column that applies the model `meta/meta-llama-3-8b-instruct` to an existing Pixeltable column `tbl.prompt` of the table `tbl`:
```python
input = {
    'system_prompt': 'You are a helpful assistant.',
    'prompt': tbl.prompt,
}
tbl.add_computed_column(
    response=run(input, ref='meta/meta-llama-3-8b-instruct')
)
```

Add a computed column that uses the model `black-forest-labs/flux-schnell` to generate images from an existing Pixeltable column `tbl.prompt`:
```python
input = {'prompt': tbl.prompt, 'go_fast': True, 'megapixels': '1'}
tbl.add_computed_column(
    response=run(input, ref='black-forest-labs/flux-schnell')
)
tbl.add_computed_column(image=tbl.response.output[0].astype(pxt.Image))
```

